# alpha

./: .gitignore  CHANGELOG.md  CLI_COMMANDS.md  README.md  README.zh.md  RELEASE_NOTES_v1.0.0.md  USAGE.md  config.example.yaml  config.yaml.example  make_alpha.md  podcast_script.txt  podcast_script_2026-02-20.md  pytest.ini  requirements.txt  test_client_server.py
alpha/: __init__.py  main.py
alpha/api/: __init__.py  chat_handler.py  dependencies.py  server.py
cognitive-brain/: README.md  brain.yaml  proposal.md  pyproject.toml
cognitive-brain/openspec/cb-mcp-core/archive/: archive.md
cognitive-brain/openspec/cb-mcp-core/spec/: design.md  spec.md  tasks.md
cognitive-brain/src/: __init__.py  config.py  server.py
cognitive-brain/src/api/: __init__.py  tools.py
cognitive-brain/src/models/: __init__.py  page.py  requests.py
cognitive-brain/tests/: test_models.py  test_server.py
docs/: CLIENT_SERVER_GUIDE.md  CLI_COMMAND_REFERENCE.md  DEEPSEEK_EMBEDDINGS.md  INSTALL_POPULAR_SKILLS.md  SKILLS_DIRECTORY_CHANGE.md  TROUBLESHOOTING_GUIDE.md  WORKFLOW_AUTOMATION_EXAMPLES.md
examples/: demo_vector_memory.py
podcast_output/: part1.txt  part2.txt  part3.txt  part4.txt  script.txt
scripts/: install_skills.sh  install_top50_skills.py  start_api_server.py  start_server.sh  tts_edge.py  tts_nls.py
tests/: test_benchmarks.py  test_github_integration.py  test_image_input.py  test_image_memory.py  test_model_performance.py  test_resilience.py  test_resilience_persistence.py  test_scheduler.py  test_screenshot_assistant.py  test_tools_expansion.py
(+181 files in other folders)
